CLOSED - task 245: Align resource images in centre of cell? http://github.com/mPowering/django-orb/issues/issue/245

--- a/orb/static/orb/style.css
+++ b/orb/static/orb/style.css
@@ -307,6 +307,11 @@ img.resource-row-icon:hover {
 	margin-bottom: 10px;
 }
 
+.resource-row-thumbnail {
+	display:block; 
+	margin: 0 auto;
+}
+
 .resource-row-study-time:hover {
 	opacity: 1;
 }
